--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,16 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "public/views",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.hbs"
+      }
     ]
   },
   "storage": {
