--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/plim1025/URSA#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
     "hbs": "^4.1.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
