--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/plim1025/URSA#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
+    "fs": "0.0.1-security",
     "hbs": "^4.1.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
