--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Paul Lim and Santiago Monleon URSA Project",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js --open"
   },
   "repository": {
     "type": "git",
