--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Paul Lim and Santiago Monleon URSA Project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,6 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.4",
     "node-static": "^0.7.11",
-    "nodemon": "^2.0.4",
     "path": "^0.12.7"
   }
 }
